stylesheets/stylesheet.css
/* === GENERAL STUFF === */
* {
  box-sizing: border-box; }

body {
  padding: 0;
  margin: 0;
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #606c71;
}

a {
  cursor: pointer;
  /*color: #602480;*/
  color: #000099;
  text-decoration: none;
  padding-bottom: .15rem;
  transition: all .3s;
  overflow-wrap: break-word;
  /*word-break: break-all;*/
  word-wrap: break-word;
}
a:hover {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}

a h1 {
  overflow-wrap: normal;
  word-break: normal;
}

ul {
  list-style-type: circle;
  -webkit-padding-start: 20px;
  width: 100%;
}

.no-border {
  border: none!important; 
}

/* === NAVIGATION BAR === */
header {
  position: fixed;
  top: 0!important;
  background-color: rgba(255,255,255,.95);
  width: 100%;
  z-index: 999;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -ms-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-transition: box-shadow 0s;
  -moz-transition: box-shadow 0s;
  -ms-transition: box-shadow 0s;
  -o-transition: box-shadow 0s;
  transition: box-shadow 0s;
}
header h1 {
  max-width: 6rem;
  font-size: 1.45rem;
  text-align: left;
  color: #159957;
  margin-left: 4.7rem;
  margin-top: -2px;
  padding: 0px;
  position: absolute;
  font-weight: 300;
  line-height: 1.7rem;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
header img {
  float: left;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
header.shrink {
  height: 3rem;
  padding: .5rem 0;
  /*overflow: hidden;*/
  -webkit-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
  -moz-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
  box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.1);
  -webkit-transition: box-shadow 0.3s;
  -moz-transition: box-shadow 0.3s;
  -ms-transition: box-shadow 0.3s;
  -o-transition: box-shadow 0.3s;
  transition: box-shadow 0.3s;
}

#nav-container {
  text-align: center;
  padding: 2rem 4rem;
  /*background: rgba(255,255,255,.5);*/
  display: block;
  /*overflow: hidden;*/
  margin: 0 auto;
}

nav ul {
  list-style-type: none;
  margin: 0;
  float: right;
  width: initial;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
nav li,
nav li.dropdown {
  display: inline-block;
  margin-left: 1rem;
  text-transform: uppercase;
  font-weight: 300;
  font-size: .9rem;
  color: #000099;
  cursor: pointer;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
nav li.dropdown {
  padding-bottom: .15rem;
}
nav li a {
  display: block;
  cursor: pointer;
}

nav .current {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}
nav .current a,
nav .current a:hover,
nav .current a:active  {
  border: none;
}

nav .dropdown::after {
  content: "";
  display: inline-block;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 6px solid #000099;
  margin: 2px 0px 2px 2px;
}
nav .dropdown:hover .dropdown-content {
    display: block;
}
nav .dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  padding: 12px 16px 12px 4px;
  z-index: 99;
  text-align: left;
}
header.shrink nav ul.dropdown-content {
  padding: .2rem;
}
nav .dropdown-content li {
  padding: .5rem 0; 
}
nav .dropdown-content li a,
nav .current .dropdown-content li a {
  border-bottom: 1px solid #f9f9f9; /* this is a fix to avoid the bouncing effect on the div */
}
nav .dropdown-content li a:hover,
nav .current .dropdown-content li a:hover {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}

/* Dropdown trigger for mobile */
#dropdown-trigger {
  display: block;
  /* critical styles - hide the checkbox input */
  position: absolute;
  clip: rect(0, 0, 0, 0);
}

.nav-trigger {
  display: none;
}

/* Language picker stuff */
#lang-picker {
  float: right;
  margin-left: 1rem;
  outline: 1px solid #000099;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
#lang-trigger {
  display: none;
}
label[for="lang-trigger"] {
  padding: 0;
}
nav #lang-picker .dropdown::after {
  content: '';
  display: none;
}
#lang-picker .dropdown {
  position: relative;
  margin: 0;
  display: flex;
  flex-direction: row;
  padding-bottom: .05rem;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
#lang-picker .dropdown span {
  display: inline-block;
  margin: .2rem .4rem 0;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
#lang-picker .dropdown .lang {
  /*float: left;*/
}
#lang-picker .dropdown .lang-icon {
  /*float: right;*/
  margin-left: .2rem;
}
#lang-picker .dropdown .lang-icon img {
  float: none;
  -webkit-transition: all 0.1s;
  -moz-transition: all 0.1s;
  -ms-transition: all 0.1s;
  -o-transition: all 0.1s;
  transition: all 0.1s;
}
#lang-picker .dropdown-content {
  background-color: #000099;
  /*max-width: 3.5rem;*/
  margin: 0 auto;
  /*margin-left: -.5rem;*/
  text-align: center;
  width: 100%;
  top: 1.9rem;
  left: 0;
  right: 0;
  outline: 1px solid #000099;
  padding: .8rem;
}
#lang-picker .dropdown-content li {
  text-align: center;
  display: block;
  margin: 0;
  padding: .3rem 0;
}
#lang-picker .dropdown-content li a {
  color: #f9f9f9;
}
/* ... */

